Finish ./changecolorproduct.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>f8-fullstack-day-10</title>
     </head>
-    <body></body>
+    <body>
+        <ul>
+            <li>
+                <a href="./animation.html">1. Phân tích và code Animation</a>
+            </li>
+            <li>
+                <a href="./listmembers.html"
+                    >2. Giao diện danh sách thành viên</a
+                >
+            </li>
+            <li>
+                <a href="./changecolorproduct.html">3. Đổi màu sản phẩm</a>
+            </li>
+        </ul>
+    </body>
 </html>
