Doi ten san pham trong ./changecolorproduct.html

--- a/changecolorproduct.html
+++ b/changecolorproduct.html
@@ -30,7 +30,7 @@
                     <div class="shoe-item">
                         <img src="./assets/img/img-vali.jpg" alt="" />
                         <div class="body">
-                            <h3 class="title">Vali Mia cỡ trung nâu</h3>
+                            <h3 class="title">Vali Mia cỡ trung hường</h3>
                             <span class="price">$300</span>
                         </div>
                     </div>
